# Mimir

./: .gitignore  README.md  mimir_demo.ipynb  pyproject.toml
benchmarks/: BENCHMARKS.md  bench_mimir_full.py  results_20260322.json
examples/: openwebui_pipeline.py
vividmimir/: __init__.py
